Custom logo update, Added screnshot
Update readme for release
Improve custom logo settings
Fix very minor translation
Added screenshots in readme

--- a/ThaiTranslation/ThaiTranslation.csproj
+++ b/ThaiTranslation/ThaiTranslation.csproj
@@ -21,7 +21,13 @@
     <None Include="manifest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-	<None Include="assets\**">
+	<None Include="assets\thai_assets">
+	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</None>
+  <None Include="assets\thai_assets.manifest">
+	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</None>
+  <None Include="assets\Translation.xml">
 	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	</None>
   </ItemGroup>
