change mod author id
to not confuse people
it's still the same old me tho

--- a/ThaiTranslation/manifest.json
+++ b/ThaiTranslation/manifest.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://raw.githubusercontent.com/ow-mods/owml/master/schemas/manifest_schema.json",
   "filename": "ThaiTranslation.dll",
-  "author": "cutellurium",
+  "author": "thuninoi",
   "name": "ThaiTranslation",
-  "uniqueName": "cutellurium.ThaiTranslation",
+  "uniqueName": "thunninoi.ThaiTranslation",
   "version": "1.0.0",
   "owmlVersion": "2.15.1",
   "dependencies": [
