--- a/ThaiTranslation/ThaiTranslation.csproj
+++ b/ThaiTranslation/ThaiTranslation.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Copyright>Copyright © 2025 cutellurium</Copyright>
+    <Copyright>Copyright © 2025 thunninoi</Copyright>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
