--- a/ThaiTranslation/manifest.json
+++ b/ThaiTranslation/manifest.json
@@ -7,6 +7,7 @@
   "version": "1.0.0",
   "owmlVersion": "2.15.1",
   "dependencies": [
-    "xen.LocalizationUtility"
+    "xen.LocalizationUtility",
+    "Raicuparta.QuantumSpaceBuddies"
   ]
 }
